# ascend-automation

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  index.html  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  logging.py  main.py
app/api/: auth.py  dashboard.py  dependencies.py  episodes.py  health.py  leads.py  records.py  runs.py  submissions.py
app/application/: auth.py  container.py  dashboard.py  lead_rewrite.py  records.py  run_item_retry.py  submissions.py
app/domain/: __init__.py  enums.py  errors.py  interfaces.py  models.py
app/infrastructure/: jwt_tokens.py  passwords.py
app/infrastructure/mongo/: __init__.py  base.py  episodes.py  leads.py  run_items.py  runs.py  (+2 more)
app/static/: auth.html  dashboard.html  records.html  smoke-feed.xml
app/worker/: __init__.py  __main__.py  orchestrator.py  runner.py  service.py
scripts/: clear_database.py  run_app.ps1  run_smoke_test.ps1  run_web.ps1  run_worker.ps1  start_local_stack.ps1
tests/: conftest.py
tests/e2e/: test_end_to_end_flow.py
tests/fixtures/: duplicate_guid_feed.xml  no_audio_feed.xml  sample_feed.xml
tests/helpers/: async_mongomock.py
tests/integration/: test_auth_api.py  test_dashboard_api.py  test_lead_rewrite_api.py  test_records_api.py  test_repositories.py  test_submissions_api.py  test_ui_pages.py  test_worker_core.py
tests/unit/: test_assemblyai_provider.py  test_auth_security.py  test_clear_database_script.py  test_domain.py  test_foundation.py  test_main_runner.py  test_openai_provider.py  test_rss_parser.py  test_source_resolver.py
(+5 files in other folders)
